--- a/crane_plus_moveit_config/config/fake_controllers.yaml
+++ b/crane_plus_moveit_config/config/fake_controllers.yaml
@@ -1,5 +1,5 @@
-arm_controller:
-    type: "position_controllers/JointTrajectoryController"
+controller_list:
+  - name: fake_Arm_controller
     joints:
       - crane_plus_shoulder_bracket_rev_joint
       - crane_plus_upper_arm_servo_joint
