--- a/crane_plus_moveit_config/config/fake_controllers.yaml
+++ b/crane_plus_moveit_config/config/fake_controllers.yaml
@@ -1,7 +1,10 @@
 controller_list:
-  - name: fake_Arm_controller
+  - name: fake_arm_controller
     joints:
-      - crane_plus_shoulder_bracket_rev_joint
-      - crane_plus_upper_arm_servo_joint
-      - crane_plus_lower_arm_bracket_joint
-      - crane_plus_wrist_bracket_joint
+      - shoulder_joint
+      - upper_arm_joint
+      - lower_arm_joint
+      - wrist_joint
+  - name: fake_gripper_controller
+    joints:
+      - gripper_joint
