--- a/crane_plus_moveit_config/config/joint_limits.yaml
+++ b/crane_plus_moveit_config/config/joint_limits.yaml
@@ -2,22 +2,27 @@
 # Specific joint properties can be changed with the keys [max_position, min_position, max_velocity, max_acceleration]
 # Joint limits can be turned off with [has_velocity_limits, has_acceleration_limits]
 joint_limits:
-  crane_plus_lower_arm_bracket_joint:
+  gripper_joint:
     has_velocity_limits: true
     max_velocity: 1.571
     has_acceleration_limits: false
     max_acceleration: 0
-  crane_plus_shoulder_bracket_rev_joint:
+  lower_arm_joint:
     has_velocity_limits: true
     max_velocity: 1.571
     has_acceleration_limits: false
     max_acceleration: 0
-  crane_plus_upper_arm_servo_joint:
+  shoulder_joint:
     has_velocity_limits: true
     max_velocity: 1.571
     has_acceleration_limits: false
     max_acceleration: 0
-  crane_plus_wrist_bracket_joint:
+  upper_arm_joint:
+    has_velocity_limits: true
+    max_velocity: 1.571
+    has_acceleration_limits: false
+    max_acceleration: 0
+  wrist_joint:
     has_velocity_limits: true
     max_velocity: 1.571
     has_acceleration_limits: false
