Add the gripper controller to moveit

--- a/crane_plus_simulation/config/crane_plus_arm.yaml
+++ b/crane_plus_simulation/config/crane_plus_arm.yaml
@@ -1,4 +1,4 @@
-crane_plus_arm_controller:
+crane_plus_arm:
   type: "position_controllers/JointTrajectoryController"
   joints:
     - shoulder_joint
