--- a/crane_plus_moveit_config/config/controller.yaml
+++ b/crane_plus_moveit_config/config/controller.yaml
@@ -1,6 +1,6 @@
 controller_manager_ns: /
 controller_list:
-  - name: crane_plus_arm_controller
+  - name: crane_plus_arm
     action_ns: follow_joint_trajectory
     type: FollowJointTrajectory
     default: true
@@ -9,8 +9,8 @@ controller_list:
       - upper_arm_joint
       - lower_arm_joint
       - wrist_joint
-  - name: crane_plus_gripper_controller
-    action_ns: gripper_action
+  - name: crane_plus_gripper
+    action_ns: gripper_command
     type: GripperCommand
     default: true
     joints:
