Working on joint names reorganisation and simulated gripper

--- a/crane_plus_moveit_config/config/controller.yaml
+++ b/crane_plus_moveit_config/config/controller.yaml
@@ -5,13 +5,13 @@ controller_list:
     type: FollowJointTrajectory
     default: true
     joints:
-      - shoulder_joint
-      - upper_arm_joint
-      - lower_arm_joint
-      - wrist_joint
+      - crane_plus_shoulder_revolute_joint
+      - crane_plus_shoulder_flex_joint
+      - crane_plus_elbow_joint
+      - crane_plus_wrist_joint
   - name: crane_plus_gripper
     action_ns: gripper_command
     type: GripperCommand
     default: true
     joints:
-      - gripper_joint
+      - crane_plus_moving_finger_joint
