--- a/crane_plus_simulation/config/crane_plus_arm.yaml
+++ b/crane_plus_simulation/config/crane_plus_arm.yaml
@@ -1,7 +1,11 @@
 crane_plus_arm:
   type: "position_controllers/JointTrajectoryController"
   joints:
-    - shoulder_joint
-    - upper_arm_joint
-    - lower_arm_joint
-    - wrist_joint
+    - crane_plus_shoulder_revolute_joint
+    - crane_plus_shoulder_flex_joint
+    - crane_plus_elbow_joint
+    - crane_plus_wrist_joint
+crane_plus_gripper:
+  type: "effort_controllers/JointPositionController"
+  joint: crane_plus_moving_finger_joint
+  pid: {p: 100.0, i: 0.01, d: 10.0}
