--- a/crane_plus_hardware/config/servo_controllers.yaml
+++ b/crane_plus_hardware/config/servo_controllers.yaml
@@ -1,33 +1,33 @@
-shoulder_servo_controller:
+shoulder_revolute_servo_controller:
   controller:
     package: dynamixel_controllers
     module: joint_position_controller
     type: JointPositionController
-  joint_name: shoulder_joint
+  joint_name: crane_plus_shoulder_revolute_joint
   joint_speed: 1.17
   motor:
     id: 1
     init: 512
     min: 0
     max: 1023
-upper_arm_servo_controller:
+shoulder_flex_servo_controller:
   controller:
     package: dynamixel_controllers
     module: joint_position_controller
     type: JointPositionController
-  joint_name: upper_arm_joint
+  joint_name: crane_plus_shoulder_flex_joint
   joint_speed: 1.17
   motor:
     id: 2
     init: 512
     min: 178
     max: 844
-lower_arm_servo_controller:
+elbow_servo_controller:
   controller:
     package: dynamixel_controllers
     module: joint_position_controller
     type: JointPositionController
-  joint_name: lower_arm_joint
+  joint_name: crane_plus_elbow_joint
   joint_speed: 1.17
   motor:
     id: 3
@@ -39,19 +39,19 @@ wrist_servo_controller:
     package: dynamixel_controllers
     module: joint_position_controller
     type: JointPositionController
-  joint_name: wrist_joint
+  joint_name: crane_plus_wrist_joint
   joint_speed: 1.17
   motor:
     id: 4
     init: 512
     min: 178
     max: 844
-gripper_servo_controller:
+finger_servo_controller:
   controller:
     package: dynamixel_controllers
     module: joint_position_controller
     type: JointPositionController
-  joint_name: gripper_joint
+  joint_name: crane_plus_moving_finger_joint
   joint_speed: 1.17
   motor:
     id: 5
