--- a/crane_plus_joint_state_publisher/config/servo_controller_names.yaml
+++ b/crane_plus_joint_state_publisher/config/servo_controller_names.yaml
@@ -1,6 +1,6 @@
 servo_controller_names:
-  - shoulder_servo_controller
-  - upper_arm_servo_controller
-  - lower_arm_servo_controller
+  - shoulder_revolute_servo_controller
+  - shoulder_flex_servo_controller
+  - elbow_servo_controller
   - wrist_servo_controller
-  - gripper_servo_controller
+  - finger_servo_controller
