--- a/crane_plus_moveit_config/config/fake_controllers.yaml
+++ b/crane_plus_moveit_config/config/fake_controllers.yaml
@@ -1,10 +1,10 @@
 controller_list:
   - name: fake_arm_controller
     joints:
-      - shoulder_joint
-      - upper_arm_joint
-      - lower_arm_joint
-      - wrist_joint
+      - crane_plus_shoulder_revolute_joint
+      - crane_plus_shoulder_flex_joint
+      - crane_plus_elbow_joint
+      - crane_plus_wrist_joint
   - name: fake_gripper_controller
     joints:
-      - gripper_joint
+      - crane_plus_moving_finger_joint
