Account for Dynamixel drivers not using roscontrol messages

--- a/crane_plus_simulation/config/crane_plus.yaml
+++ b/crane_plus_simulation/config/crane_plus.yaml
@@ -5,8 +5,7 @@ crane_plus:
     - crane_plus_shoulder_flex_joint
     - crane_plus_elbow_joint
     - crane_plus_wrist_joint
-    - crane_plus_gripper_joint
-crane_plus_gripper:
+crane_plus_finger:
   type: "effort_controllers/JointPositionController"
   joint: crane_plus_moving_finger_joint
   pid: {p: 100.0, i: 0.01, d: 10.0}
