--- a/crane_plus_ikfast_arm_plugin/package.xml
+++ b/crane_plus_ikfast_arm_plugin/package.xml
@@ -18,6 +18,7 @@
   <build_depend>roscpp</build_depend>
   <build_depend>tf_conversions</build_depend>
   <build_depend>pluginlib</build_depend>
+  <build_depend>liblapack-dev</build_depend>
 
   <run_depend>moveit_core</run_depend>
   <run_depend>liblapack-dev</run_depend>
